<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:background="#ffdffeff"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:textSize="30.0sp"
        android:textStyle="bold"
        android:textColor="#fffdf8eb"
        android:gravity="center"
        android:id="@id/crear"
        android:background="@color/main"
        android:paddingTop="5.0dip"
        android:paddingBottom="5.0dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/eliminar"
        android:fontFamily="@font/bungee" />

    <TextView
        android:textSize="20.0sp"
        android:textColor="#ff0c8c84"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5.0dip"
        android:text="@string/delete_notify" />

    <LinearLayout
        android:gravity="center"
        android:paddingTop="10.0sp"
        android:paddingBottom="10.0sp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button
            android:textSize="20.0sp"
            android:textStyle="bold"
            android:textColor="#ffdffeff"
            android:id="@+id/deleteNo"
            android:background="#ffa7a7a7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5.0sp"
            android:layout_marginRight="5.0sp"
            android:text="@string/no"
            android:layout_weight="1.0" />

        <Button
            android:textSize="20.0sp"
            android:textStyle="bold"
            android:textColor="#fffdf8eb"
            android:id="@+id/deleteSi"
            android:background="@color/main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5.0sp"
            android:layout_marginRight="5.0sp"
            android:text="@string/si"
            android:layout_weight="1.0" />

    </LinearLayout>

</LinearLayout>