<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:background="#ffdffeff"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:gravity="center"
        android:background="@color/main"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="35.0dip"
            android:layout_height="35.0dip"
            android:src="@drawable/start"
            android:layout_weight="0.2" />

        <TextView
            android:textSize="30.0sp"
            android:textStyle="bold"
            android:textColor="#fffdf8eb"
            android:gravity="center"
            android:id="@+id/crear"
            android:background="@color/main"
            android:paddingTop="5.0dip"
            android:paddingBottom="5.0dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crear_fecha"
            android:layout_weight="0.6"
            android:fontFamily="@font/bungee" />

        <ImageView
            android:layout_width="35.0dip"
            android:layout_height="35.0dip"
            android:src="@drawable/start"
            android:layout_weight="0.2" />

    </LinearLayout>

    <TextView
        android:textSize="0.0sp"
        android:textColor="#ff0c8c84"
        android:id="@+id/notiname"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10.0sp"
        android:layout_marginStart="30.0sp" />

    <EditText
        android:id="@+id/nombre"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20.0sp"
        android:layout_marginRight="20.0sp"
        android:hint="@string/nombre_persona"
        android:textColor="#8B000000"
        android:textColorHint="#8B000000"
        android:backgroundTint="#8B000000"
        android:maxLines="1"
        android:maxLength="30"
        android:inputType="textPersonName" />

    <TextView
        android:textSize="22.0sp"
        android:textStyle="bold"
        android:textColor="@color/main"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3.0dip"
        android:text="@string/fecha_de_nacimiento"
        android:fontFamily="@font/bungee" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textSize="0.0sp"
            android:textColor="#ff0c8c84"
            android:gravity="center"
            android:id="@+id/notidia"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/falta_el_dia"
            android:layout_weight="1.0" />

        <TextView
            android:textSize="0.0sp"
            android:textColor="#ff0c8c84"
            android:gravity="center"
            android:id="@+id/notimes"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/falta_el_mes"
            android:layout_weight="1.0" />

        <TextView
            android:textSize="14.0sp"
            android:textColor="#ff0c8c84"
            android:gravity="center"
            android:id="@+id/notiano"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Opcional"
            android:layout_weight="1.0" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/hiddenSpinner"
        android:clickable="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <com.jcminarro.roundkornerlayout.RoundKornerLinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="40.0dip"
            android:minWidth="4000.0dip"
            android:layout_weight="1.0"
            android:layout_marginStart="7.0dip"
            android:layout_marginEnd="10.0dip"
            app:corner_radius="10.0dip"
            xmlns:app="http://schemas.android.com/apk/res-auto">

            <Spinner
                android:id="@+id/daySpinner"
                android:background="@null"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1.0" />

            <ImageView
                android:gravity="end"
                android:background="@color/main"
                android:layout_width="10.0dip"
                android:layout_height="fill_parent"
                android:src="@drawable/arrow_down" />

        </com.jcminarro.roundkornerlayout.RoundKornerLinearLayout>


        <com.jcminarro.roundkornerlayout.RoundKornerLinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="40.0dip"
            android:minWidth="4000.0dip"
            android:layout_weight="1.0"
            app:corner_radius="10.0dip"
            xmlns:app="http://schemas.android.com/apk/res-auto">

            <Spinner
                android:id="@+id/monthSpinner"
                android:background="@null"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1.0" />

            <ImageView
                android:gravity="end"
                android:background="@color/main"
                android:layout_width="10.0dip"
                android:layout_height="fill_parent"
                android:src="@drawable/arrow_down" />

        </com.jcminarro.roundkornerlayout.RoundKornerLinearLayout>


        <com.jcminarro.roundkornerlayout.RoundKornerLinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="40.0dip"
            android:minWidth="4000.0dip"
            android:layout_weight="1.0"
            android:layout_marginStart="10.0dip"
            android:layout_marginEnd="7.0dip"
            app:corner_radius="10.0dip"
            xmlns:app="http://schemas.android.com/apk/res-auto">

            <Spinner
                android:id="@+id/yearSpinner"
                android:background="@null"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1.0" />

            <ImageView
                android:gravity="end"
                android:background="@color/main"
                android:layout_width="10.0dip"
                android:layout_height="fill_parent"
                android:src="@drawable/arrow_down" />

        </com.jcminarro.roundkornerlayout.RoundKornerLinearLayout>

    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:paddingTop="12.0sp"
        android:paddingBottom="10.0sp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button
            android:textSize="20.0sp"
            android:textStyle="bold"
            android:textColor="#ffdffeff"
            android:id="@+id/cancel"
            android:background="#ffa7a7a7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5.0sp"
            android:layout_marginRight="5.0sp"
            android:text="@string/cancelar"
            android:layout_weight="1.0" />

        <Button
            android:textSize="20.0sp"
            android:textStyle="bold"
            android:textColor="#fffdf8eb"
            android:id="@+id/ok"
            android:background="@color/main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5.0sp"
            android:layout_marginRight="5.0sp"
            android:text="@string/ok"
            android:layout_weight="1.0" />

    </LinearLayout>

</LinearLayout>